--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Unity-------------------------------------------------------
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
@@ -34,3 +35,28 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+# Java-------------------------------------------------------
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
