--- a/DownTrunk/Project/Server/game/etc/server/game/db.cfg
+++ b/DownTrunk/Project/Server/game/etc/server/game/db.cfg
@@ -1,6 +1,6 @@
 #ConnectionPool.cfg
 JDBCDriver=com.mysql.jdbc.ReplicationDriver
-JDBCConnectionURL=jdbc:mysql://127.0.0.1/tcg_trunk
+JDBCConnectionURL=jdbc:mysql://127.0.0.1/down_trunk
 #JDBCConnectionURL=jdbc:mysql:replication://192.168.1.106:3306,192.168.1.106:3306,192.168.1.106:3306/ssss_trunk
 ConnectionPoolSize=2
 ConnectionPoolMax=5000
@@ -10,5 +10,5 @@ ConnectionTimeout=30
 ConnectionCheck=false
 #ThreadWorkTime=3
 User=root
-Password=1
+Password=
 useServerPrepStmts=true
